Fixed menu and banner on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9965,9 +9965,12 @@ h5,
   width: 50%;
 }
 @media (max-width: 767.98px) {
+  .js-fullheight {
+    flex-direction: column;
+  }
   .hero-wrap .author-info,
   .hero-wrap .author-image {
-    width: 30%;
+    width: 100%;
   }
 }
 .hero-wrap .author-info {
